Finished Portfolio page. Added padding for mobile. Need to fix bug with falling character overlapping footer (z-index)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -825,6 +825,7 @@ Mobile View Specific Changes
         
         */
         margin-left: 7%;
+        margin-right: 7%;
     }
 
     .footer{
